gitops/platform-apps/freshrss/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: freshrss
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
