gitops/platform-apps/freshrss/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: freshrss
  namespace: freshrss
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`freshrss.__ZONE_NAME__`)
      services:
        - kind: Service
          name: freshrss
          port: 80
  tls: {}
